# AI-System-for-Detecting-Unknown-Cyber-Threats

./: .gitignore  README.md  extract_features.py  main.py  pyproject.toml  unknown_attack.py
api/: app.py
backend/app/: main.py
capture/: extract_features.py
dashboard/: dashboard.py  live_flows.csv
data/: live_flows.csv
db/: database.py  models.py
frontend/: dashboard.py
models/: ae_threshold.json  autoencoder_stage2.h5  robust_scaler.pkl  xgboost_stage1.pkl
notebooks/: cyber_attack_prediction (XGBoost Classifier).ipynb  cyber_attack_prediction.ipynb  cyber_attack_prediction_with_CIC-IDS-2017.ipynb
notebooks/draft_1/: Data_Engineering_and_EDA.ipynb
scripts/: unknown_attacks.py
tests/: conftest.py  test_main.py
